--- a/planos.css
+++ b/planos.css
@@ -61,6 +61,7 @@ label {
     margin-top: 150px;
     margin-bottom: 100px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -139,4 +140,12 @@ button:hover{
     border-radius: 17px;
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 768px) {
+
+    nav ul li {
+        margin-top: 10px;
+    } 
+
 }
